--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -52,6 +52,8 @@
                                     <li>@Html.ActionLink("Check-In", "CheckIn", "GatePass")</li>
                                 </ul>
                             </li>
+                            <li>@Html.ActionLink("Create Controller", "CreateController", "Account")</li>
+
                         }
                        
                         @if (User.IsInRole("User"))
