Queue Added complite

--- a/RMS.App/Views/Account/CreateController.cshtml
+++ b/RMS.App/Views/Account/CreateController.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "CreateController";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 
 <h2>CreateController</h2>
