--- a/RMS.App/Views/Account/Register.cshtml
+++ b/RMS.App/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model RMS.App.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 
 <h2>@ViewBag.Title</h2>
