--- a/RMS.App/Views/Home/Help.cshtml
+++ b/RMS.App/Views/Home/Help.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Help";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 @section styles{
 
