--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Requisition Details";
+    Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 
 <h2>Requisition Details</h2>
