--- a/RMS.App/Views/Requisitions/Reply.cshtml
+++ b/RMS.App/Views/Requisitions/Reply.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Reply";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 
 <h2>Reply</h2>
