--- a/RMS.App/Views/Requisitions/Delete.cshtml
+++ b/RMS.App/Views/Requisitions/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Delete Requisition";
+    Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 
 <h2>Delete Requisition</h2>
