--- a/RMS.App/Views/SetupAll/Index.cshtml
+++ b/RMS.App/Views/SetupAll/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
+@*<div class="container">
     <h2 class="text-center"> Setup Queue</h2>
     <div class="row">
         <div class="col-md-3 col-sm-4 col-3 border-right"><!--Left section-->
@@ -99,4 +99,4 @@
             });
         });
     </script>
-}
+}*@
