--- a/RMS.App/Views/EmployeeTypes/Details.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Details.cshtml
@@ -15,6 +15,6 @@
 </div>
 <br />
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-warning" }) &nbsp;
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-warning" }) &nbsp;*@
     @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
 </p>
