--- a/RMS.App/Views/EmployeeTypes/Index.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Index.cshtml
@@ -21,24 +21,24 @@
             @Html.Raw(TempData["msg"])
         </div>
     }
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
-                <p>
-                    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
-                </p>
-            </div>
-            @*<div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "EmployeeTypes", FormMethod.Get))
-                    {
-                        <b>Search by (Type) </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-            </div>*@
+    @*<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+            <p>
+                @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
+            </p>
         </div>
+        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
+            <p>
+                @using (Html.BeginForm("Index", "EmployeeTypes", FormMethod.Get))
+                {
+                    <b>Search by (Type) </b>
+                    @Html.TextBox("searchText")
+                    <input type="submit" value="Search" />
+                }
+            </p>
+        </div>
+    </div>*@
     </div>
     <br/>
     <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
@@ -71,7 +71,7 @@
                             @Html.DisplayFor(modelItem => item.Type)
                         </td>
                         <td class="text-right">
-                            @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new {@class = "btn btn-warning btn-sm"})
+                            @*@Html.ActionLink("Edit", "Edit", new {id = item.Id}, new {@class = "btn btn-warning btn-sm"})*@
                             @Html.ActionLink("Details", "Details", new {id = item.Id}, new {@class = "btn btn-primary btn-sm"})
                             @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new {@class = "btn btn-outline-danger btn-sm" })
                         </td>
