--- a/RMS.App/Views/RequisitionQueue/Queue.cshtml
+++ b/RMS.App/Views/RequisitionQueue/Queue.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Queue";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section styles
 {
@@ -11,120 +10,100 @@
     <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
 }
-<h2>Requisition Queue</h2>
+
+<h2> New Requisition List</h2>
 <hr/>
+<table id="example2" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+    
+    <thead>
+    <tr class="bg-info">
+        <th>
+            SL
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.RequisitionNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StatusType)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
+        </th>
+        <th class="text-center">
+            Action
+        </th>
+    </tr>
+    </thead>
+    <tbody>
+    @{
+        var sl = 0;
+    }
+    @foreach (var item in Model)
+    {
+        sl++;
 
-<div class="container border">
-    <div class="row"></div><br/>
-    <div class="row">
-        <div class="col-md-2">
-            <div class="dropdown">
-                <button type="button" class="btn btn-lg btn-outline-info dropdown-toggle" data-toggle="dropdown">
-                    Queue Items
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="@Url.Action("Requests", "AssignRequisitions")"> New Requisitions </a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "AssignRequisitions")"> Assigned Requisitions </a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "RequisitionStatus")"> Requisitions Status </a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "Requisitions")">All Requisition</a>
-                </div>
-            </div>
+        <tr>
+            <td>
+                @sl
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RequisitionNumber, new {@class = "text-danger"})
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StatusType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
+            </td>
 
-        </div>
-        <div class="col-md-10 border-left" style="padding: 15px 25px">
-            <h2 class="text-center"> New Requisition</h2>
-            <table id="example2" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
-                <thead>
-                <tr class="bg-info">
-                    <th>
-                        SL
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.RequisitionNumber)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.StatusType)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
-                    </th>
-                    <th class="text-center">
-                        Action
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                @{
-                    var sl = 0;
-                }
-                @foreach (var item in Model)
-                {
-                    sl++;
-                
-                    <tr>
-                        <td>
-                            @sl
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RequisitionNumber, new {@class = "text-danger"})
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusType)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
-                        </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Requisition.Employee.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Requisition.Employee.Designation.Title)
+            </td>
+            <td class="text-center">
+                @Html.ActionLink("Assign", "Create", "AssignRequisitions", new {requisitionId = item.RequisitionId}, new {@class = "btn btn-primary btn-sm"})
+                @Html.ActionLink("View", "ViewDetails", "AssignRequisitions", new {id = item.RequisitionId}, new {@class = "btn btn-info btn-sm"})
+                @Html.ActionLink("Cancel", "Cancel", "AssignRequisitions", new {statusId = item.Id}, new {@class = "btn btn-outline-danger btn-sm"})
 
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Requisition.Employee.FullName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Requisition.Employee.Designation.Title)
-                        </td>
-                        <td class="text-center">
-                            @Html.ActionLink("Assign", "Create", "AssignRequisitions", new {requisitionId = item.RequisitionId}, new {@class = "btn btn-primary btn-sm"})
-                            @Html.ActionLink("View", "ViewDetails", "AssignRequisitions", new {id = item.RequisitionId}, new {@class = "btn btn-info btn-sm"})
-                            @Html.ActionLink("Cancel", "Cancel", "AssignRequisitions", new {statusId = item.Id}, new {@class = "btn btn-outline-danger btn-sm"})
+            </td>
+        </tr>
+    }
+    </tbody>
+    <tfoot>
+    <tr class="bg-secondary text-white">
+        <th>
+            SL
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.RequisitionNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StatusType)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
+        </th>
+        <th class="text-center">
+            Action
+        </th>
+    </tr>
+    </tfoot>
+</table>
 
-                        </td>
-                    </tr>
-                }
-                </tbody>
-                <tfoot>
-                <tr class="bg-secondary text-white">
-                    <th>
-                        SL
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.RequisitionNumber)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.StatusType)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
-                    </th>
-                    <th class="text-center">
-                        Action
-                    </th>
-                </tr>
-                </tfoot>
-            </table>
-        </div>
-        </div>
-</div>
 
 @section scripts
 {
