--- a/RMS.App/Views/Organizations/Create.cshtml
+++ b/RMS.App/Views/Organizations/Create.cshtml
@@ -29,32 +29,11 @@
 
         </div>
 
-        <div class="form-group row">
-            
-            @Html.LabelFor(model => model.Code, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
-                <p class="text-danger">@ViewBag.Message2</p>
-            </div>
-
-        </div>
-
-        <div class="form-group row">
-            
-            @Html.LabelFor(model => model.RegNo, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.RegNo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RegNo, "", new { @class = "text-danger" })
-                <p class="text-danger">@ViewBag.Message3</p>
-            </div>
-
-        </div>
-
+        
         <div class="form-group row">
             <div class="control-label col-md-2 "></div>
             <div class="col-md-6 ">
-                <input type="submit" value="Create" class="btn btn-success"/> &nbsp;
+                <input type="submit" value="Save" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" }) 
 
             </div>
