My requiest filtering complete

--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -3,7 +3,12 @@
 @{
     Layout = null;
 }
-
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-warning">
+        @Html.Raw(TempData["msg"])
+    </div>
+}
 
 <div style="margin-left: 15px;">
     <p>
