--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -20,7 +20,7 @@
         <li class=""><a data-toggle="tab" href="#menu2">&nbsp;&nbsp; <strong>Personal Informatin</strong> &nbsp;&nbsp;</a></li>
         <li class=""><a data-toggle="tab" href="#menu3">&nbsp;&nbsp; <strong>Address</strong> &nbsp;&nbsp; </a></li>
         <li class=""><a data-toggle="tab" href="#menu4">&nbsp;&nbsp; <strong>Office Information</strong> &nbsp;&nbsp;</a></li>
-        @*<li class=""><a data-toggle="tab" href="#menu5">&nbsp;&nbsp; <strong>Login Information</strong> &nbsp;&nbsp;</a></li>*@
+        <li class=""><a data-toggle="tab" href="#menu5">&nbsp;&nbsp; <strong>Login Information</strong> &nbsp;&nbsp;</a></li>
     </ul>
     <br/>
         @if (TempData["msg"] != null)
@@ -331,6 +331,8 @@
             </div>
         </div>
 
+
+
     </div>
     <div class="form-group row">
         <div class="col-md-2"></div>
@@ -348,6 +350,51 @@
         </div>
     </div>
 </div>
+@*LogIn Information*@
+    <div id="menu5" class="tab-pane fade">
+        <div class="form-horizontal">
+            <h3 class="col-md-offset-3">LogIn Information </h3><br />
+            <div class="form-group row">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.TextBoxFor(model=>model.Email, null,  htmlAttributes: new { @class = "form-control",@placeholder = "Email" })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model=>model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.TextBoxFor(model => model.Password,  htmlAttributes: new { @class = "form-control", @placeholder = "Password" })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.TextBoxFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "form-control", @placeholder = "ConfirmPassword" })
+                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+        </div>
+        <div class="form-group row">
+            <div class="col-md-2"></div>
+            <div class="col-md-6">
+                <input type="submit" value="Save" class="btn btn-success" /> &nbsp;
+                @Html.ActionLink("Back to List", "Index", "Employees", null, new { @class = "btn btn-info" })
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-md-3">
+                <ul class="nav nav-tabs border-0">
+                    <li><a class="btn btn-dark" data-toggle="tab" href="#menu3">Provious</a></li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
 
 </div>
 </div>
