my requisition list error solve and developer details added

--- a/RMS.App/Views/Home/AboutDeveloper.cshtml
+++ b/RMS.App/Views/Home/AboutDeveloper.cshtml
@@ -35,7 +35,7 @@
                 <div class="col-md-8 float-left text-justify">
                     <p><em>
                             My name is <strong class="font-weight-bold text-uppercase text-secondary">Parvez Ahmed</strong> and I am a web developer from Dhaka, Bangladesh.
-                            I graduated in 2009 with a bachelor’s degree and Professional Diploma in Web Applications & Development .net framework from BKIICT.
+                            I graduated in 2018 with a bachelor’s degree and Professional Diploma in Web Applications & Development .net framework from BKIICT.
                             I have been in the field for nearly 2 years, and have been loving every minute of it.
                             This is our first professional application, developed for Bangladesh Computer Council (BCC). 
                             Check out some of the links below to see what I’ve been up to lately. 
@@ -45,14 +45,14 @@
                     </p>
                     <p>
 
-                       <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
-                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                       <strong>Title :</strong> <a href="https://www.facebook.com/parvez.fci" title="Facebook" target="_blank"> Facebook!</a><br/>
+                        <strong>Title :</strong> <a href="https://github.com/parvezahmed500" title="Github" target="_blank"> Github!</a>
                     </p>
                     <p>
                         <strong class="font-weight-bold">
                             Contacts:<br/>
-                            Mobile: - +88 01714863917<br/>
-                            Email: - chittoranjan.sarker@gmail.com
+                            Mobile: - +88 01817 009 653<br/>
+                            Email: - parvezfci@gmail.com
                         </strong>
                     </p>
                 </div>
@@ -138,7 +138,7 @@
                         <em>
                             My name is<strong class="font-weight-bold text-uppercase text-secondary"> Benajeer Haque </strong> and I am a web designer from Dhaka, Bangladesh.
                             Who specializes in creating dynamic and beautiful web pages?
-                            I graduated in 2016 with a bachelor’s degree in Computer Science and Engineering from the Bangladesh University of Business & Technology.
+                            I graduated in 2010 with a bachelor’s degree in Mathmatics from National University.
                             This is our first professional application, developed for Bangladesh Computer Council (BCC).
                             I am a trainee of Professional Diploma in Web Applications & Development from the BKIICT.
 
@@ -147,13 +147,13 @@
                     <p>
 
                         <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
-                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                        <strong>Title :</strong> <a href="https://github.com/mosammat" title="Link !" target="_blank"> Github!</a>
                     </p>
                     <p>
                         <strong class="font-weight-bold">
                             Contacts:<br />
-                            Mobile: - +88 01681854486<br />
-                            Email: - benjeer.nure@gmail.com
+                            Mobile: - +88 01791 057 663<br />
+                            Email: - benajeer.benu@gmail.com
                         </strong>
                     </p>
                 </div>
@@ -179,8 +179,8 @@
                     </p>
                     <p>
 
-                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
-                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                        <strong>Title :</strong> <a href="https://github.com/chittoranjan" title="Guthub!" target="_blank"> Github!</a><br/>
+                        <strong>Title :</strong> <a href="https://www.facebook.com/chittoranjan.sarker" title="Facebook!" target="_blank"> Facebook!</a>
                     </p>
                     <p>
                         <strong class="font-weight-bold">
