--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "All Requisitions";
-    Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section styles
 {
